changed a few things

--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
     <select name="teammate-select" id="teammate-select" size="1"></select>
     <select name="hero-select" id="hero-select" size="1"> </select>
     <button onclick="getStats()">Go</button>
+    <div class="overall-winrate"></div>
     <div class="results"></div>
+    </div>
     <script type="text/javascript" src="members.json"></script>
+    <script src="no.js"></script>
     <script src="query.js"></script>
 </body>
 </html>
+
+<!-- Potential Changes
+2 Columns one for each person in the query! Can get this from the games even if the other person has no info
+Icons for heroes instea dof nbames but make the names stil searchable somehow or alphaetical???
+Custom number of games to take
+custom steam ids for each player 
+secret on cloudflare
+dontpickpudge.com
+-->
